# arch-lens-ai

./: .gitignore  LICENSE  LLMs.md  README.md  package-lock.json  package.json
docs/: Coding-Structure-Convention.md  Ingestion-GitHub-Changelog.md  Project-Concept.md  Project-Plan.md  Project-Scope-Statement.md
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/constants/: translations.ts
frontend/src/hooks/: useArtifacts.ts  useWorkspaces.ts
frontend/src/lib/: axios.ts  queryClient.ts
python-sidecar/: .env.example  pyproject.toml
python-sidecar/scripts/: build_sidecar.py
python-sidecar/src/: main.py
python-sidecar/src/app/api/: deps.py
python-sidecar/src/app/api/v1/: api.py
python-sidecar/src/app/api/v1/endpoints/: artifact.py  health.py  workspace.py
python-sidecar/src/app/core/: config.py  constants.py  database.py  lifecycle.py  logger.py  middleware.py  security.py  state.py  watchdog.py
python-sidecar/src/app/dto/: artifact.py  common.py  internal.py  workspace.py
python-sidecar/src/app/models/: __init__.py  analysis.py  artifact.py  workspace.py
python-sidecar/src/app/repositories/: analysis.py  artifact.py  base.py  link.py  workspace.py
python-sidecar/src/app/services/: artifact.py  workspace.py
python-sidecar/src/app/services/ingestion/: __init__.py  _arxiv.py  _github.py  _local.py
scripts/: bump-version.ps1  run-dev.bat  run-dev.ps1
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
(+10 files in other folders)
